--- a/applications/media/src/org/mmbase/applications/media/resources/formats.properties
+++ b/applications/media/src/org/mmbase/applications/media/resources/formats.properties
@@ -20,3 +20,12 @@
 19=HTML
 20=Synchronized Multimedia (SMIL)
 21=QuickTime
+22=Windows media (asx)
+23=Windows media (wax)
+24=Windows media (wmv)
+25=Windows media (wm)
+26=Windows media (asx)
+27=Windows media (wmx)
+28=Windows media (wmz)
+29=Windows media (wmd)
+30=Midi
