added country setting to jsp-editors
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11041 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/html/WEB-INF/classes/org/mmbase/jspeditors/editors.properties
+++ b/html/WEB-INF/classes/org/mmbase/jspeditors/editors.properties
@@ -1,4 +1,4 @@
-# version     $Id: editors.properties,v 1.15 2004-02-20 19:14:22 michiel Exp $
+# version     $Id: editors.properties,v 1.16 2004-06-28 19:41:16 michiel Exp $
 # since       MMBase-1.6
 # author      Michiel Meeuwissen
 #
@@ -56,6 +56,7 @@ config.stylesheet=style sheet
 config.method=login method
 config.session=cloud session variable
 config.language=language (two letter code)
+config.country=country (two letter code)
 
 Node=Node
 oftype=of type
