--- a/speeltuin/applications/packaging/build.xml
+++ b/speeltuin/applications/packaging/build.xml
@@ -6,9 +6,9 @@
 <project name="packaging" default="jar" basedir=".">
   <property name="project.name"   value="packaging" />
   <property name="project.package"   value="org/mmbase/applications" />
-  <property name="project.target.templates.dir" value="mmpm" />
+  <property name="project.target.templates.dir" value="." />
   <property name="project.source.dir" location="." />
-  <property name="project.templates.dir" value="${project.source.dir}/templates/jsp/mmpm" />
+  <property name="project.templates.dir" value="${project.source.dir}/templates/jsp/" />
 
   <property name="source.dir" value="../../mmbase" />
 
