--- a/contributions/thememanager/build.xml
+++ b/contributions/thememanager/build.xml
@@ -6,7 +6,9 @@
 <project name="ThemeManager" default="jar" basedir=".">
   <property name="project.name"   value="thememanager" />
   <property name="project.package"   value="org/mmbase/applications" />
-  <property name="project.target.templates.dir" value="thememanager" />
+  <property name="project.target.templates.dir" value="." />
+  <property name="project.source.dir" location="." />
+  <property name="project.templates.dir" value="${project.source.dir}/templates/jsp/" />
   <property name="source.dir" value="../../mmbase" />
 
   &base;
