keesj:added generated arrrows (so that fig2dev is not required)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11156 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/bugtracker/templates/images/Makefile
+++ b/applications/bugtracker/templates/images/Makefile
@@ -1,7 +1,7 @@
 SOURCE=arrow.fig
 SOURCE2=arrow.png
 SCALE=-scale 20x20
-FORMAT=gif
+FORMAT=png
 all:
 	fig2dev -L png -b 0 arrow.fig arrow.png
 	convert $(SCALE) $(SOURCE2) arrow-right.$(FORMAT)
