keesj:yet an other day working on this great application
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11172 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/applications/bugtracker/templates/images/Makefile
+++ b/applications/bugtracker/templates/images/Makefile
@@ -1,6 +1,6 @@
 SOURCE=arrow.fig
 SOURCE2=arrow.png
-SCALE=-scale 20x20
+SCALE=-transparent white -scale 10x10
 FORMAT=png
 all:
 	fig2dev -L png -b 0 arrow.fig arrow.png
