--- a/build-example.properties
+++ b/build-example.properties
@@ -6,7 +6,7 @@
 ##                                                                         #
 ############################################################################
 
-## @version $Id: build-example.properties,v 1.5 2003-12-02 21:11:41 keesj Exp $
+## @version $Id: build-example.properties,v 1.6 2004-09-06 13:09:16 michiel Exp $
 
 ## @todo: michiel: I think directory references should be absolute.
 ##        because relative paths don't work with calling other ants
@@ -29,7 +29,8 @@ optimize	=on
 #debug		=on
 debug		=off
 deprecation	=on
+nowarn      =on
 
 ## To generate javadocs for some subpackage only set the javadoc.packages property,
 ## default: javadoc.packages=org.mmbase.*
-distro		=MMBase 1.7.0
+distro		=MMBase 1.8.0
