--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,7 @@ several MMBase-checkouts.
   <property name="optimize" value="on"/>
   <property name="debug" value="on"/>
   <property name="deprecation" value="off"/>
+  <property name="nowarn" value="off"/>
   <property name="javadoc.cleaning" value="true"/>
   <property name="javadoc.packages" value="org.mmbase.*"/>
   <property name="mmcidoc.packages" value="org.mmbase.bridge,org.mmbase.storage.search"/>
@@ -476,6 +477,7 @@ builddate=${builddate}
            debug="${debug}"
            optimize="${optimize}"
            source="1.4"
+           nowarn="${nowarn}"
            deprecation="${deprecation}">
       <exclude name="org/mmbase/module/JMSendMail.java" unless="naming.in.classpath" />
       <exclude name="org/mmbase/module/database/Naming.java" unless="naming.in.classpath" />
