--- a/speeltuin/jaco/jircs/build.xml
+++ b/speeltuin/jaco/jircs/build.xml
@@ -19,7 +19,7 @@
   <property name="deprecation" value="off"/>
   <property name="minimal.java.version" value="1.4"/> <!-- Change this version in readme.txt also -->
   <property name="minimal.ant.version" value="Apache Ant version 1.5.1 compiled on October 2 2002"/>
-  <property name="version" value="1.3.1"/> <!-- Change this version in ChatEngine.java also -->
+  <property name="version" value="1.3.2.dev"/> <!-- Change this version in ChatEngine.java also -->
   <property name="srcdist.name" value="jircs-src-${version}"/>
   <property name="bindist.name" value="jircs-${version}"/>
   <patternset id="docs">
