Jircs now logs in to MMBase using a username and password. User builder and fields can be specified in the Jircs configuration.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11545 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/jaco/jircs/conf/jircs_mmbase.properties
+++ b/speeltuin/jaco/jircs/conf/jircs_mmbase.properties
@@ -82,6 +82,15 @@ UserGroupNode=ChatExampleGroupNode
 # The chatservers node that represents the chat server.
 ChatServerNode=ChatExampleServerNode
 
+# The users builder to use.
+UsersNodeManagerName=users
+UsersAccountFieldName=account
+UsersSessionFieldName=session
+
+# The account for Jircs to login to MMBase.
+mmbase.username=admin
+mmbase.password=admin2k
+
 administrator.username=admin
 administrator.password=nimda
 
