--- a/speeltuin/jaco/jircs/conf/jircs_servlet_mmbase.properties
+++ b/speeltuin/jaco/jircs/conf/jircs_servlet_mmbase.properties
@@ -82,6 +82,15 @@ UserGroupNode=ChatExampleGroupNode
 # The chatservers node that represents the chat server.
 ChatServerNode=ChatExampleServerNode
 
+# The users builder to use.
+UsersNodeManagerName=users
+UsersAccountFieldName=account
+UsersSessionFieldName=session
+
+# The account for Jircs to login to MMBase.
+mmbase.username=admin
+mmbase.password=admin2k
+
 administrator.username=admin
 administrator.password=nimda
 
