Added changes.txt to distro's.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11547 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/jaco/jircs/build.xml
+++ b/speeltuin/jaco/jircs/build.xml
@@ -23,6 +23,7 @@
   <property name="srcdist.name" value="jircs-src-${version}"/>
   <property name="bindist.name" value="jircs-${version}"/>
   <patternset id="docs">
+    <include name="changes.txt"/>
     <include name="jircs.png"/>
     <include name="jircs.dia"/>
     <include name="readme.txt"/>
