--- a/applications/xmlimporter/build.xml
+++ b/applications/xmlimporter/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!DOCTYPE project 
+<!DOCTYPE project
  [ <!ENTITY base     SYSTEM "../buildbase.xml" > ]
 >
 
@@ -7,7 +7,19 @@
   <property name="project.name"     value="xmlimporter" />
   <property name="project.package"   value="org/mmbase/applications/xmlimporter" />
   <property name="project.target.templates.dir"   value="xmlimporter" />
+  <property name="project.extra.path" location="../scan/build/mmbase-scan.jar" />
   &base;
+
+  <target name="scan">
+    <echo message="${applications.dir}/scan" />
+    <ant dir="${applications.dir}/scan" inheritAll="false" />
+  </target>
+
+  <target name="dependent.jar" depends="scan,jar" />
+
+  <target name="dependent.package" depends="dependent.jar,package" />
+
+  <target name="dependent.install" depends="dependent.jar,install" />
 
 </project>
 
