--- a/build.xml
+++ b/build.xml
@@ -297,6 +297,7 @@ builddate=${builddate}
     <copy file="${xerces.jar}"         tofile="${release.lib.dir}/xerces.renametojar" />
     <copy file="${xml-apis.jar}"       tofile="${release.lib.dir}/xml-apis.renametojar" />
     <copy file="${log4j.jar}"          tofile="${release.lib.dir}/log4j.jar" />
+    <copy file="${fileupload.jar}"     tofile="${release.lib.dir}/commons-fileupload.jar" />
     <copy file="${hsqldb.jar}"         todir="${release.lib.dir}" />
     <copy file="${jai_codec.jar}"      todir="${release.lib.dir}" />
     <copy file="${jai_core.jar}"       todir="${release.lib.dir}" />
@@ -319,7 +320,7 @@ builddate=${builddate}
     <copy file="${xerces.jar}"    todir="${compile.lib.dir}" />
     <copy file="${xml-apis.jar}"  todir="${compile.lib.dir}" />
     <copy file="${servlet.jar}"   todir="${compile.lib.dir}" />
-
+    <copy file="${fileupload.jar}" tofile="${compile.lib.dir}//commons-fileupload.jar" />
     <copy file="${jai_codec.jar}" todir="${compile.lib.dir}" />
     <copy file="${jai_core.jar}"  todir="${compile.lib.dir}" />
     <copy file="${log4j.jar}"     tofile="${compile.lib.dir}/log4j.jar" />
@@ -984,6 +985,14 @@ Build-compiler: ${build.compiler}
       <param name="destfile" value="${xalan.dest}"/>
       <param name="expandedfile" value="${xalan.jar}"/>
     </antcall>
+
+    <echo message="fileupload" />
+    <antcall target="downloadgz">
+      <param name="sourcefile" value="${fileupload.loc}"/>
+      <param name="destfile" value="${fileupload.dest}"/>
+      <param name="expandedfile" value="${fileupload.jar}"/>
+    </antcall>
+
   </target>
 
   <target name="proxyflags" depends="init">
