--- a/applications/xmlimporter/build.xml
+++ b/applications/xmlimporter/build.xml
@@ -3,7 +3,7 @@
  [ <!ENTITY base     SYSTEM "../buildbase.xml" > ]
 >
 
-<project name="XMLImporter" default="jar" basedir=".">
+<project name="XMLImporter" default="dependent.jar" basedir=".">
   <property name="project.name"     value="xmlimporter" />
   <property name="project.package"   value="org/mmbase/applications/xmlimporter" />
   <property name="project.target.templates.dir"   value="xmlimporter" />
