Documentation: added a utility class that generates a documentation index html page. Called either from a jsp (to generate on demand), or from ant (generates a static index.html for offline use)
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11894 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/build.xml
+++ b/build.xml
@@ -1061,9 +1061,11 @@ Build-compiler: ${build.compiler}
       <property name="documentation.dest.dir" value="${mmdocs.dir}"/>
     </ant>
 
+    <ant target="documentation.index" />
+
   </target>
 
-  <target name="documentation.index">
+  <target name="documentation.index" depends="init.compile" description="generates the index.html for the documentation">
     <!-- compile class for listing of builders -->
     <javac srcdir="${source-src.dir}"
            destdir="${build.dir}/classes"
@@ -1086,7 +1088,6 @@ Build-compiler: ${build.compiler}
       </classpath>
       <arg value="${mmdocs.dir}" />
     </java>
-
   </target>
 
 
