configuring filemanagement, translations for editors
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11997 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/build.xml
+++ b/contributions/didactor2/build.xml
@@ -23,6 +23,12 @@
     <delete file="${build.dir}/webapp/WEB-INF/taglib.tld" />
     <delete file="${build.dir}/webapp/WEB-INF/web.xml" />
     <foreach list="${components}" target="build.component" inheritall="true" param="component" />
+    <replace file="${build.dir}/webapp/WEB-INF/web.xml"
+             token="$${filemanagement.data.directory}"
+             value="${filemanagement.data.directory}"/>
+    <replace file="${build.dir}/webapp/WEB-INF/web.xml"
+             token="$${filemanagement.data.url}"
+             value="${filemanagement.data.url}"/>
   </target>
 
   <target name="clean">
