--- a/contributions/didactor2/src/core/webinf/web.xml
+++ b/contributions/didactor2/src/core/webinf/web.xml
@@ -232,4 +232,14 @@
   <!-- 
   EXTRATAGLIB
   -->
+
+    <context-param>
+        <param-name>filemanagementBaseUrl</param-name>
+        <param-value>${filemanagement.data.url}</param-value>
+    </context-param>
+     <context-param>
+        <param-name>filemanagementBaseDirectory</param-name>
+        <param-value>${filemanagement.data.directory}</param-value>
+    </context-param>
+    
 </web-app>
