added missing translations
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12056 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -51,13 +51,13 @@ folderopened=chatverslag geopend
 folderclosed=chatverslag gesloten
 addchatlogpersonal=Toevoegen chatverslag aan persoonlijke werkruimte
 addchatlogpublic=Toevoegen chatverslag aan publieke werkruimte
-EDUCATION=Education
+EDUCATION=Opleiding
 testwithoutquestions=Bij deze test zijn geen vragen vastgelegd.
 buttontextdone=klaar
 buttontextnext=volgende
 educations=Opleidingen
 createNewEducation=Nieuwe Opleiding Aanmaken
-createNewEducationDiscription=Maak een nieuwe opleiding aan
+createNewEducationDescription=Maak een nieuwe opleiding aan
 treatEducation=Bewerk opleiding
 treat=bewerk
 contentmanagement=contentbeheer
@@ -167,4 +167,21 @@ deleteno=nee
 deletethisfolderyesno=Wilt u deze map inclusief de inhoud echt verwijderen?
 deletefolderitemsyesno=Wilt u de geselecteerde mapitems echt verwijderen?
 deletefolderitems=Verwijder mapitems
-LEARNENVIRONMENTTITLE=Learn environment
+LEARNENVIRONMENTTITLE=Leeromgeving
+editComponents=Componenten beheer
+editComponentsDescription=Ga naar het componenten beheer
+roles=Rollen Beheer
+editPeopleRoleRelEducation=Toevoegen/bewerken rollen
+editPeopleRoleRelEducationDescription=Bewerken rollen
+createNewRoles=Nieuwe rol toevoegen
+createNewRolesDescription=Voeg een nieuwe rol toe aan de opleiding
+treatRoles=Bewerk bestaande rol
+metadata=Metadata
+createNewMetadatastandard=Voeg nieuwe metadata standaard toe
+createNewMetadatastandardDescription=Nieuwe metadata standaard toevoegen
+treatMetastandard=Bewerk bestaande metadata standaard
+createNewMetadefinition=Voeg nieuwe metadefitie toe
+createNewMetadefinitionDescription=Nieuwe metadafinitie toevoegen
+treatMetadefinition=Bewerk bestaande metadefinitie
+editEducation=Bewerk bestaande opleiding
+treatLearnobject=Bewerk bestaand leerobject
