re-added filemanagement link in wizards
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12066 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
+++ b/contributions/didactor2/src/education/java/nl/didactor/component/education/EducationMessageBundle.properties
@@ -185,3 +185,5 @@ createNewMetadefinitionDescription=Nieuwe metadafinitie toevoegen
 treatMetadefinition=Bewerk bestaande metadefinitie
 editEducation=Bewerk bestaande opleiding
 treatLearnobject=Bewerk bestaand leerobject
+filemanagement=Filemanagement
+
