javadoc is now alwyas generated under documentation (mmdocs) dir. this means it is included in both sercdist and bindist.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12073 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/build.xml
+++ b/build.xml
@@ -742,7 +742,7 @@ Build-compiler: ${build.compiler}
     <mkdir dir="${build.dir}/mmbase-src/docs"/>
     <mkdir dir="${build.dir}/mmbase-src/docs/api"/>
     <javadoc packagenames="${javadoc.packages}"
-             destdir="${build.dir}/mmbase-src/docs/api"
+             destdir="${mmdocs.dir}/javadoc"
              author="true"
              version="true"
              use="false"
@@ -854,6 +854,7 @@ Build-compiler: ${build.compiler}
 
   <target name="web.documentation" if="do.documentation">
     <antcall target="documentation" />
+    <antcall target="javadocs" />
   </target>
 
   <!-- =================================================================== -->
