--- a/html/WEB-INF/web.xml
+++ b/html/WEB-INF/web.xml
@@ -2,6 +2,12 @@
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
 
+  <display-name>MMBase distro</display-name>
+  <description>
+    MMBase is an open-source content managment system. See http://www.mmbase.org/
+  </description>
+
+
   <!-- uncomment this and fill in the right value, if your app-server
   does not succeed to determin this automaticly.
   <context-param>
