--- a/applications/packaging/build.xml
+++ b/applications/packaging/build.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0"?>
 <!DOCTYPE project 
- [ <!ENTITY base SYSTEM "../../mmbase/applications/buildbase.xml" > ]
+ [ <!ENTITY base SYSTEM "../buildbase.xml" > ]
 >
 
 <project name="packaging" default="jar" basedir=".">
   <property name="project.name"   value="packaging" />
-  <property name="project.package"   value="org/mmbase/applications" />
+  <property name="project.package"   value="org/mmbase/applications/packaging" />
   <property name="project.target.templates.dir" value="." />
   <property name="project.source.dir" location="." />
   <property name="project.templates.dir" value="${project.source.dir}/templates/jsp/" />
-
-  <property name="source.dir" value="../../mmbase" />
-
   &base;
 
 
